'add green color'

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                                 <li class="sub-item animate">BLOG MASONRY GRID<div></div></li>
                                 <li class="sub-item animate">TESTIMONIALS MASONRY GRID<div></div></li>
                             </ul>
-                        </li>
+                        <div></div></li>
                         <li class="item">SLIDER SHORTCODES
                             <ul class="sub-items">
                                 <li class="sub-item animate">ROOM SLIDERS<div></div></li>
                                 <li class="sub-item animate">SERVICES SLIDERS<div></div></li>
                             </ul>
-                        </li>
+                        <div></div></li>
                         <li class="item">SINGLE PAGE VIEWS
                             <ul class="sub-items">
                                 <li class="sub-item animate">ROOM SINGLE VIEW<div></div></li>
@@ -78,7 +78,7 @@
                                 <li class="sub-item animate">POST SINGLE VIEW<div></div></li>
                                 <li class="sub-item animate">POST SINGLE FULLSCREEN<div></div></li>
                             </ul>
-                        </li>
+                        <div></div></li>
                         <li class="item animate">ERROR 404 PAGE</li>
                         <li class="item animate">BUY THIS THEME!</li>
                     </ul>
@@ -86,7 +86,7 @@
                     <div class="info">
                         <p>This is a sidebar that can be used to put an extra menu with details that don't need to be on the main menu. It also serves as the mobile menu area!</p>
                         <div class="follow"><img src="./assets/images/phone.png" width="50"><span>(+30) 210 1234567</span></div>
-                        <div class="follow"><img src="./assets/images/mail.png" width="50"><span><a href="#">info@plethora-xenia.com</a></span></div>
+                        <div class="follow"><img src="./assets/images/mail.png" width="50"><span><a href="#" class="mail">info@plethora-xenia.com</a></span></div>
                     </div>
                 </div>
             </div>
