add green color

--- a/index.html
+++ b/index.html
@@ -58,29 +58,29 @@
                     <div class="close">close</div>
                     <ul class="list-items">
                         <li class="item animate">RESERVATIONS & BOOKING<div></div></li>
-                        <li class="item animate">GRIDS & MASONRY VIEWS
+                        <li class="item animate">GRIDS & MASONRY VIEWS<div></div>
                             <ul class="sub-items">
                                 <li class="sub-item animate">ROOMS LIST GRID<div></div></li>
                                 <li class="sub-item animate">BLOG MASONRY GRID<div></div></li>
                                 <li class="sub-item animate">TESTIMONIALS MASONRY GRID<div></div></li>
                             </ul>
-                        <div></div></li>
-                        <li class="item">SLIDER SHORTCODES
+                        </li>
+                        <li class="item animate">SLIDER SHORTCODES<div></div>
                             <ul class="sub-items">
                                 <li class="sub-item animate">ROOM SLIDERS<div></div></li>
                                 <li class="sub-item animate">SERVICES SLIDERS<div></div></li>
                             </ul>
-                        <div></div></li>
-                        <li class="item">SINGLE PAGE VIEWS
+                        </li>
+                        <li class="item animate">SINGLE PAGE VIEWS<div></div>
                             <ul class="sub-items">
                                 <li class="sub-item animate">ROOM SINGLE VIEW<div></div></li>
                                 <li class="sub-item animate">SERVICE SINGLE VIEW<div></div></li>
                                 <li class="sub-item animate">POST SINGLE VIEW<div></div></li>
                                 <li class="sub-item animate">POST SINGLE FULLSCREEN<div></div></li>
                             </ul>
-                        <div></div></li>
-                        <li class="item animate">ERROR 404 PAGE</li>
-                        <li class="item animate">BUY THIS THEME!</li>
+                        </li>
+                        <li class="item animate">ERROR 404 PAGE<div></div></li>
+                        <li class="item animate">BUY THIS THEME!<div></div></li>
                     </ul>
                     <div class="border-list"></div>
                     <div class="info">
